use openrewrite recipt UpgradeToJava17 (#227)
* use openrewrite recipt UpgradeToJava17

* fixed test issues